objects/Relationship_Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>BankAccount__c</referenceTo>
        <relationshipLabel>Relationship-Bank Account</relationshipLabel>
        <relationshipName>Relationship_Bank_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>Relationship-Bank Account</relationshipLabel>
        <relationshipName>Relationship_Bank_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Relationship-Bank Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship-Bank Account	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship-Bank Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>